fix too long sidebar bug

--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,7 @@ h1 {
   list-style-type: none;
   padding: 0;
   margin: 0;
-  max-height: 40vh;
+  max-height: 35vh;
   overflow: auto;
 }
 
